# libscan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
libscan/: macros.h  scan.c  scan.h  util.h
libscan/arc/: arc.c  arc.h
libscan/cbr/: cbr.c  cbr.h
libscan/comic/: comic.c
libscan/ebook/: ebook.c  ebook.h
libscan/font/: font.c  font.h
libscan/json/: json.c
libscan/media/: media.c  media.h
libscan/mobi/: scan_mobi.c
libscan/msdoc/: msdoc.c  msdoc.h
libscan/ooxml/: ooxml.c  ooxml.h
libscan/raw/: raw.c  raw.h
libscan/text/: text.c  text.h
src/: macros.h  text.c  text.h  types.h
test/: main.c  main.cpp  test_util.cpp  test_util.h
